Resolved issues with constricted view to speed up call graphs